bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value finished
finished = false
^BDR:44: error: not found: value finished
    finished = true
    ^